Fixtures/negative/unterminated_conditional.sv
`ifdef ENABLED
module unterminated_conditional(input logic a, output logic y);
    assign y = a;
endmodule
